changed the project todo app to recipe app

--- a/github-finder.html
+++ b/github-finder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pet adoption app</title>
+    <title>GitHub Search</title>
 
     <meta
       name="viewport"
