--- a/the-recipe-app.html
+++ b/the-recipe-app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Github Search</title>
+    <title>The Recipe App</title>
 
     <meta
       name="viewport"
@@ -42,17 +42,15 @@
     <div class="main-container main-container-projects">
       <br />
 
-      <h3>To Do App</h3>
+      <h3>The Recipe App</h3>
 
       <p>
         <br />
-        An app for documenting daily tasks.
+        The Recipe App searches for recipes based on the users input.
         <br />
         <br />
-        The ToDo app is a one page React App that was build using
-        create-react-app. The app saves the users input to the local storage of
-        the browser so that the state will be saved for the next time the
-        website is opened.
+        Created with React, the Recipe app queries the Edamam API for recipes
+        and outputs 10 recipes and their ingredients.
         <br />
         <br />
       </p>
@@ -62,21 +60,21 @@
         <li>- React</li>
         <li>- HTML</li>
         <li>- CSS</li>
-        <li>- Sass</li>
-        <li>- Bootstrap</li>
+        <li>- React UseEffect</li>
+        <li>- React useState</li>
       </ul>
       <h5>GitHub Project Repository and Website:</h5>
 
-      <a href="https://github.com/mor-solomonov/React-ToDo-App">
+      <a href="https://github.com/mor-solomonov/recipe-app">
         <i class="fab fa-github github-projects"></i
       ></a>
-      <a href="https://react-todo-app.morsolomonov.vercel.app/">
+      <a href="https://recipe-app-beta.vercel.app/">
         <i class="fas fa-external-link-alt external-link"></i
       ></a>
 
       <h5>App Preview:</h5>
       <div class="img-container ">
-        <img class="todo-image" src="images/To_Do_App.png" />
+        <img class="recipe-image" src="images/search-recipes.png" />
       </div>
     </div>
     <div class="footer-alignment">
