changed github finder description

--- a/github-finder.html
+++ b/github-finder.html
@@ -48,21 +48,16 @@
 		</div> -->
 
       <h3>Github Finder</h3>
-      <br />
+
       <p>
         The Github Finder is a React app that searches for Github profiles and
         their profile details.
         <br />
+        The app connects to the Github API to fetch the user's data.
         <br />
-        The app searches for the keyword in the username and the bio and once
-        the profile is selected the app navigates to a new page and shows most
-        of the users details like, location, latest public repositories,
+        Once the profile is selected the app navigates to a new page and shows
+        the user's details like location, latest public repositories, and
         hireable status.
-
-        <br />
-        <br />
-        The app connects to the Github API to fetch all the user data.
-
         <br />
         <br />
       </p>
