changed creatives around project to the melody music app

--- a/melody-music-app.html
+++ b/melody-music-app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Creatives Around</title>
+    <title>Melody Music App</title>
 
     <meta
       name="viewport"
@@ -43,31 +43,15 @@
     <div class="main-container main-container-projects">
       <br />
 
-      <div class="img-container">
-        <img src="/images/ca_redpurplelogo.png" />
-      </div>
+      <h3>Melody Music Player</h3>
 
       <p>
         <br />
+        Melody Music App is a music player that plays copyright-free chillout
+        songs from a Dutch music label that is called Chillhop. The app is made
+        with React, has a library of songs and CSS animations to improve the
+        user experience.
 
-        Creatives Around is a location-based social platform for visual artists.
-        The mission of the app is to hold space for visual artists, from various
-        fields and levels of skill, to connect - inspire one another - and
-        collaborate.
-        <br />
-        <br />
-
-        The idea of the app is to connect with other visual artists in close
-        proximity. The app suggests profiles based on location and art forms.
-        Once the connection is confirmed by both sides, direct messaging between
-        the users is available and the users are added as a connection.
-
-        <br />
-        <br />
-        This project was done in a team as part of the final project at DCI. Our
-        backend developer dropped off during the project and we currently are
-        looking for a backend developer to join this project.
-        <br />
         <br />
       </p>
 
@@ -75,8 +59,7 @@
       <ul>
         <li>- React</li>
         <li>- HTML</li>
-        <li>- CSS</li>
-        <li>- Bootstrap</li>
+        <li>- SCSS</li>
       </ul>
       <h5>GitHub Project Repository:</h5>
 
@@ -88,7 +71,12 @@
       ></a>
 
       <h5>App Preview:</h5>
-      <div class="c-a-images-container">
+      <div class="adopt-me-images">
+        <div class="img-container adopt_me_images">
+          <img src="/images/melody_app.png" />
+        </div>
+      </div>
+      <!-- <div class="c-a-images-container">
         <div class="img-container">
           <img class="creatives-around-image" src="images/profile_page.png" />
         </div>
@@ -124,7 +112,7 @@
             src="images/middle_of_profile2.png"
           />
         </div>
-      </div>
+      </div> -->
     </div>
     <footer>
       <ul>
