added external l inks for melody music app

--- a/melody-music-app.html
+++ b/melody-music-app.html
@@ -63,10 +63,10 @@
       </ul>
       <h5>GitHub Project Repository:</h5>
 
-      <a href="https://github.com/mor-solomonov/creatives-around-frontend">
+      <a href="https://github.com/mor-solomonov/melody-music-app">
         <i class="fab fa-github github-projects"></i
       ></a>
-      <a href="https://nicsolitom.github.io/creatives-around-mobile/">
+      <a href="https://melody-music-app.morsolomonov.vercel.app/">
         <i class="fas fa-external-link-alt external-link"></i
       ></a>
 
