--- a/the-recipe-app.html
+++ b/the-recipe-app.html
@@ -74,7 +74,7 @@
 
       <h5>App Preview:</h5>
       <div class="img-container ">
-        <img class="recipe-image" src="images/search-recipes.png" />
+        <img class="recipe-image" src="images/recipe_app.png" />
       </div>
     </div>
     <div class="footer-alignment">
