changed the github finder project to the sound of silence

--- a/sound-of-silence.html
+++ b/sound-of-silence.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GitHub Search</title>
+    <title>Sound of Silence</title>
 
     <meta
       name="viewport"
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
       rel="stylesheet"
     />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
@@ -42,41 +41,36 @@
 
     <div class="main-container main-container-projects">
       <br />
-      <h3>Github Finder</h3>
+      <h3>Sound of Silence</h3>
       <p>
-        The Github Finder is a React app that searches for Github profiles and
-        their profile details.
         <br />
-        The app connects to the Github API to fetch the user's data.
-        <br />
-        Once the profile is selected the app navigates to a new page and shows
-        the user's details like location, latest public repositories, and
-        hireable status.
-        <br />
+        The Sound of Silence is a vanilla javascript search app for songs with
+        the title "Sound of Silence". The artist data is stored in an internal
+        database in the file music.js. Each entry shows: the track name, artist
+        name, artwork release date price, and currency.
+
         <br />
       </p>
 
       <h5>Technologies:</h5>
       <ul>
-        <li>- React</li>
+        <li>- JavaScript</li>
         <li>- HTML</li>
         <li>- CSS</li>
+        <li>- bootstrap</li>
       </ul>
       <h5>GitHub Project Repository:</h5>
-      <a href="https://github.com/mor-solomonov/Github-Finder">
+      <a href="https://github.com/mor-solomonov/Sound-of-Silence">
         <i class="fab fa-github github-projects"></i
       ></a>
-      <a href="https://github-finder-dpz40ppqx.vercel.app">
+      <a href="https://song-search.now.sh/">
         <i class="fas fa-external-link-alt external-link"></i
       ></a>
 
       <h5>App Preview:</h5>
       <div class="adopt-me-images">
-        <div class="img-container adopt_me_images">
-          <img src="/images/github__finder.png" />
-        </div>
-        <div class="img-container adopt_me_images">
-          <img src="/images/githubfinder_user.png" />
+        <div class="img-container s_o_s_image">
+          <img src="/images/s_o_s_image.png" />
         </div>
       </div>
     </div>
