--- a/the-recipe-app.html
+++ b/the-recipe-app.html
@@ -46,12 +46,9 @@
 
       <p>
         <br />
-        The Recipe App searches for recipes based on the users input.
-        <br />
-        <br />
         Created with React, the Recipe app queries the Edamam API for recipes
-        and outputs 10 recipes and their ingredients.
-        <br />
+        and outputs 10 recipes, their ingredients, and a link to the external
+        website with the instructions based on the user's input.
         <br />
       </p>
 
@@ -60,8 +57,6 @@
         <li>- React</li>
         <li>- HTML</li>
         <li>- CSS</li>
-        <li>- React UseEffect</li>
-        <li>- React useState</li>
       </ul>
       <h5>GitHub Project Repository and Website:</h5>
 
