added styles for project descriptions and titles

--- a/melody-music-app.html
+++ b/melody-music-app.html
@@ -41,18 +41,13 @@
     </div>
 
     <div class="main-container main-container-projects">
-      <br />
+      <h3 class="projectTitle">Melody Music Player</h3>
 
-      <h3>Melody Music Player</h3>
-
-      <p>
-        <br />
+      <p class="projectDescription">
         Melody Music App is a music player that plays copyright-free chillout
         songs from a Dutch music label that is called Chillhop. The app is made
         with React, has a library of songs and CSS animations to improve the
         user experience.
-
-        <br />
       </p>
 
       <h5>Technologies</h5>
