--- a/sound-of-silence.html
+++ b/sound-of-silence.html
@@ -40,16 +40,13 @@
     </div>
 
     <div class="main-container main-container-projects">
-      <br />
-      <h3>Sound of Silence</h3>
-      <p>
-        <br />
+      <h3 class="projectTitle">Sound of Silence</h3>
+      <p class="projectDescription">
         The Sound of Silence is a vanilla javascript search app for songs with
-        the title "Sound of Silence". The artist data is stored in an internal
-        database in the file music.js. Each entry shows: the track name, artist
-        name, artwork release date price, and currency.
-
-        <br />
+        the title "Sound of Silence". <br />
+        Each entry shows: the track name, artist name, artwork, release date
+        price, and currency.<br />
+        The artist data is stored in an internal database in the file music.js.
       </p>
 
       <h5>Technologies:</h5>
