--- a/the-recipe-app.html
+++ b/the-recipe-app.html
@@ -40,16 +40,13 @@
     </div>
 
     <div class="main-container main-container-projects">
-      <br />
+      <h3 class="projectTitle">The Recipe App</h3>
 
-      <h3>The Recipe App</h3>
-
-      <p>
-        <br />
-        Created with React, the Recipe app queries the Edamam API for recipes
-        and outputs 10 recipes, their ingredients, and a link to the external
-        website with the instructions based on the user's input.
-        <br />
+      <p class="projectDescription">
+        The Recipe App is a Recipe search app that finds recipes based on the
+        users input. <br />Created with React, the Recipe app queries the Edamam
+        API for recipes and outputs 10 recipes, their ingredients, and a link to
+        the external website with the instructions
       </p>
 
       <h5>Technologies:</h5>
