changes images names and added border-box property

--- a/sound-of-silence.html
+++ b/sound-of-silence.html
@@ -67,7 +67,7 @@
       <h5>App Preview:</h5>
       <div class="adopt-me-images">
         <div class="img-container s_o_s_image">
-          <img src="/images/s_o_s_image.png" />
+          <img src="/images/s_o_s_app.png" />
         </div>
       </div>
     </div>
