--- a/sound-of-silence.html
+++ b/sound-of-silence.html
@@ -65,10 +65,8 @@
       ></a>
 
       <h5>App Preview:</h5>
-      <div class="adopt-me-images">
-        <div class="img-container s_o_s_image">
-          <img src="/images/s_o_s_app.png" />
-        </div>
+      <div class="img-container">
+        <img class="recipe-image" src="/images/s_o_s_app.png" />
       </div>
     </div>
     <footer>
